proj1/tests/other-tests/oskis-angels_tests/correct/func-call-simple.py
def no_param():
    print 10

no_param()

def one_param(x):
    print x

one_param(20)

def two_param(y, z):
    print y + z

two_param(30, 40)


